# calhacks12

./: .gitignore  README.md
agent/: mentor_agent.py  state.py
backend/: .env  README.md  pyproject.toml  test-letta-llm.py
backend/examples/: structured_json_example.py
backend/src/backend/: letta.py  letta_test.py  main.py
backend/src/backend/letta_agent/: course_agent.py  enhanced_course_agent.py  main.py  skill_tree_generator.py
frontend/: TOPIC_PAGES_GUIDE.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(protected)/: data.json  layout.tsx
frontend/src/app/(protected)/dashboard/: page.tsx
frontend/src/app/(protected)/goal/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/home/: layout.tsx
frontend/src/app/topic/: page.tsx
frontend/src/components/: app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  goals-stats-cards.tsx  letta-test.tsx  page-header.tsx  section-cards.tsx  streaming-test.tsx  theme-toggle.tsx
frontend/src/components/chatbox/: chat-input.tsx  chat.tsx  index.tsx
frontend/src/components/goals/: custom-node.tsx  hierarchical-skill-tree.tsx  index.tsx  node-detail-modal.tsx  react-flow-skill-tree.tsx  skill-tree.tsx  stats-cards.tsx
frontend/src/components/sidebar/: app-sidebar.tsx  nav-main.tsx  nav-user.tsx
frontend/src/components/topic-page/: index.tsx  topic-chatbot.tsx  topic-page.tsx  topic-quiz.tsx  topic-resources.tsx  topic-skill-tree.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/hooks/: use-mobile.ts
(+8 files in other folders)
