[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Eugene Vuong",email = "vuongeugene@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "livekit-api (>=1.0.7,<2.0.0)",
    "livekit-plugins-tavus (>=1.2.15,<2.0.0)",
    "livekit-agents (>=1.2.15,<2.0.0)",
    "livekit (>=1.0.17,<2.0.0)",
    "letta-client (>=0.1.324,<0.2.0)",
    "livekit-plugins-deepgram (>=1.2.15,<2.0.0)",
    "livekit-agents[openai] (>=1.2,<2.0)",
    "httpx (>=0.25.0,<1.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "openai (>=2.6.1,<3.0.0)",
    "fastapi (>=0.104.0,<1.0.0)",
    "uvicorn (>=0.24.0,<1.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=4.0.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
